--- a/assets/css/src/c80-cargador.less
+++ b/assets/css/src/c80-cargador.less
@@ -76,6 +76,8 @@ body.single {
 	}
 
 	.texto-c80-rel {
+		max-height:550px;
+		overflow:scroll;
 		.constarticle {
 			padding-bottom:12px;
 			margin-bottom:12px;
